# llmProjects

./: main.py  pyproject.toml
ai_property_rental_assisstant/: README.md  rental_property_scraper.ipynb
insurance_rag/: .gitignore  day1.ipynb  day2.ipynb  requirements.txt
menu_parser/: menu_parser.ipynb
profile_chatbot/: assisstant.py
profile_chatbot/me/: summary.txt
