[project]
name = "llmprojects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dotenv>=0.9.9",
    "gradio>=4.44.1",
    "huggingface-hub==0.25.2",
    "ipython>=8.18.1",
    "openai>=2.7.2",
    "pypdf>=6.3.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
]
